# opencrab

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  config.toml.example  keys.toml.example  usage_pricing.toml.example
.github/workflows/: ci.yml  release.yml
docker/: compose.yml
patches/wacore-binary/: .cargo_vcs_info.json
src/: channels.rs  error.rs  lib.rs  logging.rs  main.rs  pricing.rs
src/a2a/: server.rs  types.rs
src/a2a/handler/: mod.rs  stream.rs
src/benches/: database.rs  memory.rs
src/brain/: commands.rs  prompt_builder.rs  self_update.rs
src/brain/agent/: context.rs  service.rs
src/brain/provider/: mod.rs  (+5 more)
src/cli/: commands.rs  mod.rs  ui.rs
src/config/: crabrace.rs  mod.rs  secrets.rs  types.rs  update.rs
src/db/: mod.rs  retry.rs
src/discord/: agent.rs  handler.rs  mod.rs
src/error/: mod.rs
src/llm/: mod.rs
src/logging/: logger.rs  mod.rs
src/memory/: embedding.rs  index.rs  mod.rs  search.rs  store.rs
src/migrations/: 20251028000001_initial_schema.sql
src/patches/wacore-binary/: Cargo.toml
src/patches/wacore-binary/src/: encoder.rs
src/slack/: agent.rs  handler.rs
src/telegram/: agent.rs  handler.rs  mod.rs
src/tests/: cli_test.rs  error_scenarios_test.rs  integration_test.rs  onboarding_keys_test.rs  plan_mode_integration_test.rs  streaming_test.rs
src/tui/: app.rs  error.rs  events.rs  highlight.rs  markdown.rs  mod.rs  onboarding.rs  onboarding_render.rs  render.rs  runner.rs  splash.rs
src/utils/: retry.rs
src/whatsapp/: agent.rs  handler.rs  mod.rs  sqlx_store.rs
tasks/: todo.md
(+44 files in other folders)
